--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend
+#server.port=
+spring.datasource.url=jdbc:mysql://localhost:3306/shiwansh
+spring.datasource.username=root
+spring.datasource.password=Vaishnav99
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
